# relative_pose_gcam_affine

./: CMakeLists.txt  README.md
evaluation/: cayley_rotation.m  generate_3Dscenepoints.m  get_affinetransformation.m  test_solver_AC.m
include/: solver_ac_pose3d_1AC_plane.h  solver_ac_pose3d_2AC_plane.h  solver_ac_pose4d.h
mex/: solver_ac_pose3d_1AC_plane.cpp  solver_ac_pose3d_1AC_plane.mexa64  solver_ac_pose3d_2AC_plane.cpp  solver_ac_pose3d_2AC_plane.mexa64  solver_ac_pose4d.mexa64
src/: solver_ac_pose3d_1AC_plane.cpp  solver_ac_pose3d_2AC_plane.cpp  solver_ac_pose4d.cpp
test/: CMakeLists.txt  README.md  test3d_1AC_plane.cpp  test3d_2AC_plane.cpp  test4d.cpp
test/include/: solver_ac_pose3d_2AC_plane.h
test/src/: solver_ac_pose3d_1AC_plane.cpp  solver_ac_pose3d_2AC_plane.cpp  solver_ac_pose4d.cpp  test3d_inter_1AC_plane.cpp  test3d_inter_2AC_plane.cpp  test3d_intra_2AC_plane.cpp  test4d_inter_2AC_vertical.cpp  test4d_intra_2AC_vertical.cpp
test_matlab/: DLT_homography.m  find_optimal_transformation.m  find_solution.m  find_solution_t_singlecamera.m  generate_2AC_data.m  generate_2AC_single_data.m  skew.m  solver_depth_intra_2ac_enhance.m  test_solver_AC.m
test_matlab/mex/: solver_ac_pose3d_1AC_plane.mexa64  solver_ac_pose3d_2AC_plane.mexa64  solver_ac_pose4d.cpp  solver_ac_pose4d.mexa64
